Local (#1)
* grouped task api for doc

* grouped task api for doc

* update docs
